--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Sidewalk Accessibility Survey</title>
+    <!-- Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-3MC54XMWQD"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-3MC54XMWQD');
+      </script>
+    <!-- End Google Analytics -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
